# game-analytics-dashboard

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  USING_UV.md  ltv_xgboost_model.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app_backup.py
.streamlit/: config.toml  secrets.toml.example
dashboard/: __init__.py
dashboard/components/: insights.py
dashboard/config/: database.py
dashboard/tabs/abtest/: __init__.py  goal_metrics.py  interpretation.py  main.py  sample_size_calculator.py
dashboard/tabs/abtest/calculators/: __init__.py  ab_test_calculator.py  (+2 more)
dashboard/tabs/acquisition/: charts.py  main.py  manual_insights.py  processor.py  queries.py
dashboard/tabs/assistant/: main.py
dashboard/tabs/contact/: __init__.py  main.py
dashboard/tabs/engagement/: charts.py  main.py  manual_insights.py  queries.py
dashboard/tabs/ltv/: __init__.py  data_processing.py  main.py  manual_insights.py  queries.py
dashboard/tabs/monetization/: charts.py  main.py  manual_insights.py  queries.py
dashboard/utils/: ai_explainer.py  data_analyzer.py
data/: anomaly_transactions.csv  daily_engagement.csv  daily_return_rate.csv  engagement_metrics.csv  player_distribution.csv  progression_milestone.csv  retention_rate.csv  revenue_by_source.csv  revenue_segmentation.csv  two_week_retention.csv
ml/: ltv_xgboost_model.py
notebook/: Tactile_DataAnalyst_Assignment.ipynb
sql/: acquisition_1.sql  engagement_1.sql  engagement_2.sql  engagement_3.sql  engagement_4.sql  ltv_1.sql  ltv_2.sql  monetization_1.sql  monetization_2.sql
(+13 files in other folders)
